<resources>
    <string name="app_name">projet lampe</string>
    <string name="veuillez_vous_inscrire_ou_vous_connceter_pour_utiliser_la_lampe_connect_e">Veuillez-vous inscrire ou vous connceter pour utiliser la lampe connectée</string>
    <string name="votre_nom">votre nom</string>
    <string name="nom">Nom :</string>
    <string name="pr_nom">Prénom :</string>
    <string name="votre_pr_nom">votre prénom</string>
    <string name="adresse_mail">adresse mail</string>
    <string name="mail">Mail :</string>
    <string name="confirmer_votre_mot_de_passe">Confirmer votre mot de passe :</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="vendredi">vendredi</string>
    <string name="jeudi">jeudi</string>
    <string name="mercredi">mercredi</string>
    <string name="mardi">mardi</string>
    <string name="lundi">lundi</string>
    <string name="tous_les_jours">Tous les jours</string>
    <string name="mode_de_la_lampe">Mode de la lampe :</string>
    <string name="fonctionnalit_s">Fonctionnalités</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="r_glez_l_intensit">Réglez l\'intensité :</string>
    <string name="programmation">Programmation :</string>
    <string name="jusqu"><![CDATA[Jusqu\'à  :]]></string>
    <string name="energie">Energie :</string>
    <string name="compte">Compte :</string>
    <string name="contact">Contact :</string>
    <string name="travail">Travail :</string>
    <string name="dormir">Dormir :</string>
    <string name="soleil">Soleil:</string>
    <string name="date">Laisser vide si indertéminé:</string>
    <string name="utilisation">Utilisation:</string>
    <string name="Utilisation">utilisation</string>
    <string name="Couleur">Choisissez la couleur de la lampe : </string>
    <string name="choisissez_une_couleur">Choisissez une couleur</string>
    <string name="votre_couleur_choisie_est">Votre couleur choisie est :</string>
    <string name="set_color">Set Color</string>
    <string name="la_couleur_choisie_est">La couleur choisie est :</string>
    <string name="enregistrer_les_modification">Enregistrer les modifications</string>
    <string name="mdp">mdp</string>
    <string name="modifier_le_mot_de_passe">Modifier le mot de passe</string>
    <string name="Nom">Nom</string>
    <string name="nomView">Nom :</string>
    <string name="votre_profil">Votre profil</string>
    <string name="votre_message">votre message</string>
    <string name="envoyer">Envoyer</string>
    <string name="message">Message* :</string>
    <string name="mailEdit">mail</string>
    <string name="mailView">Mail</string>
    <string name="deconexion">Deconnexion</string>
    <string name="votre_compte">Votre Compte</string>
    <string name="contactPage">Contact</string>
    <string name="besoin_d_aide_concernant_l_utilisation_de_la_lampe_contactez_nous">Besoin d\'aide concernant l\'utilisation de la lampe ? Contactez-nous :</string>
    <string name="prenomView">Prénom* :</string>
    <string name="prenomEdit">prénom</string>
    <string name="numEdit">Numéro</string>
    <string name="numView">Numéro* :</string>
    <string name="votre_profil_vue">Votre Profil</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choisissezune_couleur">Choisissez une couleur</string>
    <string name="lacouleur_choisie_est">La couleur choisie est :</string>
    <string name="appliquer">Appliquer</string>
    <string name="code">code</string>
    <string name="code1">code</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="bienvenue">BIENVENUE</string>
    <string name="inscriptionbutton">Inscription</string>
    <string name="connexionbutton">Connexion</string>
    <string name="code3">code</string>

</resources>