<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="485dp"
        android:layout_height="74dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/fonctionnalit_s"
            android:text="@string/fonctionnalit_s" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d_connexion" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="487dp"
        android:layout_height="774dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_gler_l_intensit" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_de_la_lampe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/travail"
                app:srcCompat="@drawable/iconetravail"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/dormir"
                app:srcCompat="@drawable/iconelit"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="7dp"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:contentDescription="@string/soleil"
                app:srcCompat="@drawable/iconesoleil"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/programmation" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tous_les_jours" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/lundi" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/mardi" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/mercredi" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/jeudi" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/vendredi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jusqu" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="fonctionnalités"
                    app:srcCompat="@drawable/iconeampoule"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/energie"
                    app:srcCompat="@drawable/iconnegreeneco"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton16"
                    android:layout_width="wrap_content"
                    android:layout_height="116dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/compte"
                    app:srcCompat="@drawable/iconecompte"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton17"
                    android:layout_width="wrap_content"
                    android:layout_height="121dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contact"
                    app:srcCompat="@drawable/contact"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>