<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/numView"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="408dp"
        android:layout_height="59dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/contactPage"
            android:textColor="#171616"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:onClick="sendMessage8"
            android:text="@string/deconexion" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="654dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/contactPage"
            android:textColor="#121111"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/besoin_d_aide_concernant_l_utilisation_de_la_lampe_contactez_nous"
            android:textColor="#171616" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/nomView"
            android:textColor="#151515"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nomView"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/prenomView"
            android:textColor="#050505"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/prenomEdit" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/mailView"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/mailEdit" />


        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/numView"
            android:textColor="#000000"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/numEdit" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/message"
            android:textColor="#090909"
            android:textSize="20sp" />

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView2"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:minHeight="48dp"
            android:text="@string/votre_message" />

        <Button
            android:id="@+id/button10"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/envoyer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/fonctionnalit_s"
                app:srcCompat="@drawable/iconeampoule"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/energie"
                app:srcCompat="@drawable/iconnegreeneco"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="100dp"
                android:layout_height="116dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/compte"
                app:srcCompat="@drawable/iconecompte"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="96dp"
                android:layout_height="121dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/contact"
                app:srcCompat="@drawable/contact"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>