<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="413dp"
        android:layout_height="87dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="      Votre Profil"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:onClick="sendMessage7"
            android:text="@string/d_connexion" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="641dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="170dp"
            android:text="@string/votre_profil"
            android:textColor="#131313" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/nomView"
            android:textColor="#020202"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/Nom"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/prenomView"
            android:textColor="#070707"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/prenomView"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/mailView"
            android:textColor="#070707"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/mailEdit"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/modifier_le_mot_de_passe"
            android:textColor="#040303"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/mdp"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/enregistrer_les_modification" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="113dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/fonctionnalit_s"
                app:srcCompat="@drawable/iconeampoule"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/energie"
                app:srcCompat="@drawable/iconnegreeneco"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="100dp"
                android:layout_height="116dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/compte"
                app:srcCompat="@drawable/iconecompte"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="96dp"
                android:layout_height="121dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/contact"
                app:srcCompat="@drawable/contact"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>