<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="535dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="#F5F5F5"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="278dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#F5F5F5"
            android:contentDescription="@string/Utilisation"
            android:text="@string/utilisation"
            android:textColor="#0B0B0B"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:onClick="sendMessage6"
            android:text="@string/d_connexion" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="487dp"
        android:layout_height="774dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/programmation"
            android:textColor="#070707"
            android:textSize="16sp" />


        <CheckBox
            android:id="@+id/checkBox11"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:minHeight="48dp"
            android:text="@string/lundi" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="5dp"
                android:minHeight="48dp"
                android:text="@string/mardi" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="5dp"
                android:minHeight="48dp"
                android:text="@string/mercredi" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="5dp"
                android:minHeight="48dp"
                android:text="@string/jeudi" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="5dp"
                android:minHeight="48dp"
                android:text="@string/vendredi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/jusqu"
                android:textColor="#0C0C0C" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/date" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="-20dp"
            android:ems="10"
            android:inputType="date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="292dp"
            android:layout_marginStart="60dp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>